# Voice-Notes

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  test.yml
src/: app.py
src/core/: __init__.py  audio_devices.py  audio_library.py  config.py  notes_manager.py  transcription.py
src/styles/: theme.py
src/ui/: main_window.py
src/utils/: platform.py
src/widgets/: player_widget.py  recorder_widget.py  transcription_widget.py
voice_notes/: __init__.py  app.py
voice_notes/core/: config.py  notes_manager.py  recorder.py  transcribe.py  translation.py
voice_notes/styles/: __init__.py  theme.py
voice_notes/ui/: __init__.py
voice_notes/utils/: helpers.py
voice_notes/widgets/: __init__.py  library_widget.py  media_widget.py  notes_widget.py  player_widget.py  transcription_widget.py
